Install and configure Jest with Enzyme

--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "eslint": "^5.15.3",
     "eslint-config-gatsby-standard": "^2.1.1",
+    "jest": "^24.5.0",
     "prettier": "^1.16.4"
   },
   "keywords": [
@@ -34,8 +37,11 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-    "lint:js": "eslint src --ext .jsx,.js --quiet"
+    "lint:js": "eslint src --ext .jsx,.js --quiet",
+    "test": "jest --verbose",
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand --verbose",
+    "test:watch": "jest --watchAll --verbose",
+    "test:coverage": "jest --verbose --coverage"
   },
   "repository": {
     "type": "git",
