--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
+    "babel-jest": "^24.5.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "eslint": "^5.15.3",
     "eslint-config-gatsby-standard": "^2.1.1",
-    "jest": "^24.5.0",
-    "prettier": "^1.16.4"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.5.0"
   },
   "keywords": [
     "gatsby"
