--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "@emotion/styled": "^10.0.10",
     "gatsby": "^2.3.3",
     "gatsby-image": "^2.0.35",
+    "gatsby-link": "^2.1.1",
     "gatsby-plugin-emotion": "^4.0.6",
     "gatsby-plugin-manifest": "^2.0.25",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sharp": "^2.0.32",
+    "gatsby-react-router-scroll": "^2.0.7",
     "gatsby-source-filesystem": "^2.0.28",
     "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-sharp": "^2.1.17",
+    "jsonld": "^1.6.2",
+    "n3": "^1.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
