--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "node scripts/logEnviroment.js && gatsby build",
+    "build": "node src/scripts/pullFiles.js && gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
