Add Koa packages and script

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-sharp": "^2.1.17",
     "jsonld": "^1.6.2",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
     "n3": "^1.1.1",
     "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
@@ -41,7 +44,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "node src/scripts/pullFiles.js && gatsby build",
+    "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
@@ -51,7 +54,7 @@
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand --verbose",
     "test:watch": "jest --watchAll --verbose",
     "test:coverage": "jest --verbose --coverage",
-    "pullFiles": "REPO=dobladov/testTTTL node src/scripts/pullFiles.js"
+    "listenHook": "node scripts/listenHook.js"
   },
   "repository": {
     "type": "git",
