--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-sharp": "^2.1.17",
     "jsonld": "^1.6.2",
+    "markdown-to-jsx": "^6.10.2",
     "n3": "^1.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
