--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "dependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
+    "colors": "^1.3.3",
+    "dotenv": "^8.0.0",
+    "fs-extra": "^8.1.0",
     "gatsby": "^2.3.3",
     "gatsby-image": "^2.0.35",
     "gatsby-link": "^2.1.1",
@@ -28,7 +31,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-jest": "^24.5.0",
