--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
+    "flexsearch": "^0.6.30",
     "fs-extra": "^8.1.0",
     "gatsby": "^2.3.3",
     "gatsby-image": "^2.0.35",
