Omit empty properties from JSON

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "markdown-to-jsx": "^6.10.2",
     "n3": "^1.1.1",
     "node-fetch": "^2.6.0",
+    "omit-empty": "^1.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
