--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
+    "url-template": "^2.0.8",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
