Add log preview at /build

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ PORT = 3000
 SECRET = YOUR_GITHUB_WEBHOOK_SECRET
 INBOX=https://test.skohub.io/inbox?target={id}
 HUB=https://test.skohub.io/hub
+BUILD_URL=https://test.skohub.io/build
