--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-PORT = 3000
-SECRET = YOUR_GITHUB_WEBHOOK_SECRET
+PORT=3000
+SECRET=YOUR_GITHUB_WEBHOOK_SECRET
 INBOX=https://test.skohub.io/inbox?target={id}
-HUB=https://test.skohub.io/hub
+FOLLOWERS=https://test.skohub.io/followers?subject={id}
 BUILD_URL=https://test.skohub.io/build
