--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gatsby-plugin-react-helmet": "^3.1.14",
     "gatsby-plugin-sharp": "^2.2.37",
     "gatsby-react-router-scroll": "^2.1.15",
-    "gatsby-source-filesystem": "^2.1.36",
+    "gatsby-source-filesystem": "^2.1.37",
     "gatsby-transformer-json": "^2.2.17",
     "gatsby-transformer-sharp": "^2.3.3",
     "jsonld": "^1.8.1",
@@ -49,7 +49,8 @@
     "eslint-config-gatsby-standard": "^2.1.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
-    "nock": "^11.7.0"
+    "nock": "^11.7.0",
+    "supertest": "^4.0.2"
   },
   "keywords": [
     "gatsby"
