--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dotenv": "^8.2.0",
     "flexsearch": "^0.6.32",
     "fs-extra": "^8.1.0",
-    "gatsby": "^2.17.11",
+    "gatsby": "~2.17.11",
     "gatsby-image": "^2.2.31",
     "gatsby-link": "^2.2.23",
     "gatsby-plugin-emotion": "^4.1.14",
