--- a/package.json
+++ b/package.json
@@ -5,50 +5,42 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@emotion/core": "^10.0.22",
-    "@emotion/styled": "^10.0.23",
+    "@emotion/core": "^10.1.1",
     "colors": "^1.4.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "flexsearch": "^0.6.32",
-    "fs-extra": "^9.0.0",
-    "gatsby": "~2.17.11",
-    "gatsby-image": "^2.2.31",
-    "gatsby-link": "^2.2.23",
-    "gatsby-plugin-emotion": "^4.1.14",
-    "gatsby-plugin-manifest": "^2.2.27",
-    "gatsby-plugin-offline": "^3.0.19",
-    "gatsby-plugin-react-helmet": "^3.1.14",
-    "gatsby-plugin-sharp": "^2.2.37",
-    "gatsby-react-router-scroll": "^2.1.15",
-    "gatsby-source-filesystem": "^2.1.37",
-    "gatsby-transformer-json": "^2.2.17",
-    "gatsby-transformer-sharp": "^2.3.3",
-    "graceful-fs": "^4.2.4",
+    "fs-extra": "^9.1.0",
+    "gatsby": "^2.32.13",
+    "gatsby-plugin-emotion": "^4.5.0",
+    "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-sharp": "^2.14.4",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-transformer-sharp": "^2.12.1",
+    "graceful-fs": "^4.2.8",
     "jsonld": "^1.8.1",
-    "koa": "^2.11.0",
-    "koa-bodyparser": "^4.2.1",
+    "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
     "koa-router": "^7.4.0",
     "lodash.escaperegexp": "^4.1.2",
     "markdown-to-jsx": "^6.11.4",
-    "mjn": "^0.2.2",
-    "n3": "^1.3.0",
-    "node-fetch": "^2.6.1",
-    "normalize.css": "^8.0.1",
+    "mjn": "^0.2.6",
+    "n3": "^1.11.1",
+    "node-fetch": "^2.6.5",
     "omit-empty": "^1.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^5.2.0",
     "url-template": "^2.0.8",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "@reach/router": "^1.3.4",
     "babel-jest": "^24.9.0",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.15.1",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^6.6.0",
     "eslint-config-gatsby-standard": "^2.1.1",
-    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "nock": "^11.7.0",
     "supertest": "^4.0.2"
