wip: working gatsby 3 migration

--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
   "dependencies": {
     "@emotion/core": "^10.1.1",
     "colors": "^1.4.0",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^8.6.0",
     "flexsearch": "^0.6.32",
     "fs-extra": "^9.1.0",
-    "gatsby": "^2.32.13",
-    "gatsby-plugin-emotion": "^4.5.0",
-    "gatsby-plugin-image": "^2.0.0",
-    "gatsby-plugin-sharp": "^2.14.4",
-    "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-transformer-sharp": "^2.12.1",
+    "gatsby": "^3.0.0",
+    "gatsby-plugin-emotion": "^3.0.0",
+    "gatsby-plugin-image": "^1.14.1",
+    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
     "graceful-fs": "^4.2.8",
     "jsonld": "^1.8.1",
     "koa": "^2.13.4",
@@ -31,6 +32,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^5.2.0",
+    "stream-browserify": "^3.0.0",
     "url-template": "^2.0.8",
     "uuid": "^3.3.3"
   },
@@ -39,8 +41,8 @@
     "babel-jest": "^24.9.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "eslint": "^6.6.0",
-    "eslint-config-gatsby-standard": "^2.1.1",
+    "eslint": "^7.0.0",
+    "eslint-config-gatsby-standard": "^3.0.2",
     "jest": "^24.9.0",
     "nock": "^11.7.0",
     "supertest": "^4.0.2"
