--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@emotion/core": "^10.1.1",
+    "@emotion/react": "^11.5.0",
     "colors": "^1.4.0",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^8.6.0",
     "flexsearch": "^0.6.32",
     "fs-extra": "^9.1.0",
-    "gatsby": "^4.1.2",
+    "gatsby": "^4.1.3",
     "gatsby-plugin-emotion": "^7.1.0",
-    "gatsby-plugin-image": "^2.1.0",
-    "gatsby-plugin-sharp": "^4.1.1",
+    "gatsby-plugin-image": "^2.1.1",
+    "gatsby-plugin-sharp": "^4.1.2",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-sharp": "^4.1.0",
     "graceful-fs": "^4.2.8",
@@ -34,7 +34,7 @@
     "react-helmet": "^5.2.0",
     "stream-browserify": "^3.0.0",
     "url-template": "^2.0.8",
-    "uuid": "^3.3.3"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@reach/router": "^1.3.4",
