--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: echo Using node version $(node --version)
+    - run: echo Using npm version $(npm --version)
     - run: cp .env.example .env
     - run: cp test/data/systematik.ttl data/
     - run: npm ci
