--- a/package.json
+++ b/package.json
@@ -5,42 +5,42 @@
   "version": "0.1.0",
   "author": "Hochschulbibliothekszentrum NRW <https://www.hbz-nrw.de/>, graphthinking GmbH <https://graphthinking.com/>",
   "dependencies": {
-    "@emotion/react": "^11.5.0",
+    "@emotion/react": "^11.8.1",
     "colors": "^1.4.0",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^10.0.0",
     "flexsearch": "^0.6.32",
     "fs-extra": "^10.0.0",
-    "gatsby": "^4.1.3",
-    "gatsby-plugin-emotion": "^7.1.0",
-    "gatsby-plugin-image": "^2.1.1",
-    "gatsby-plugin-sharp": "^4.1.2",
-    "gatsby-source-filesystem": "^4.1.0",
-    "gatsby-transformer-sharp": "^4.1.0",
+    "gatsby": "^4.9.2",
+    "gatsby-plugin-emotion": "^7.9.0",
+    "gatsby-plugin-image": "^2.8.1",
+    "gatsby-plugin-sharp": "^4.9.0",
+    "gatsby-source-filesystem": "^4.9.0",
+    "gatsby-transformer-sharp": "^4.9.0",
     "graceful-fs": "^4.2.8",
     "jsonld": "^5.2.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1",
     "lodash.escaperegexp": "^4.1.2",
-    "markdown-to-jsx": "^7.1.3",
+    "markdown-to-jsx": "^7.1.7",
     "mjn": "^0.2.6",
-    "n3": "^1.11.2",
+    "n3": "^1.13.0",
     "node-fetch": "^2.6.6",
     "omit-empty": "^1.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^5.2.0",
     "stream-browserify": "^3.0.0",
     "url-template": "^2.0.8",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@reach/router": "^1.3.4",
+    "@gatsbyjs/reach-router": "^1.3.6",
     "babel-jest": "^27.3.1",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme": "^3.11.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "eslint": "^7.23.0",
     "eslint-config-gatsby-standard": "^3.0.2",
     "jest": "^27.3.1",
