--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@emotion/react": "^11.8.1",
     "colors": "^1.4.0",
     "crypto-browserify": "^3.12.0",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.0",
     "flexsearch": "^0.6.32",
     "fs-extra": "^10.0.0",
     "gatsby": "^4.9.2",
@@ -31,18 +31,18 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^5.2.0",
+    "react-helmet": "^6.1.0",
     "stream-browserify": "^3.0.0",
-    "url-template": "^2.0.8",
+    "url-template": "^3.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@gatsbyjs/reach-router": "^1.3.6",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "babel-jest": "^27.3.1",
     "enzyme": "^3.11.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
-    "eslint": "^7.23.0",
-    "eslint-config-gatsby-standard": "^3.0.2",
+    "eslint": "^8.10.0",
+    "eslint-config-react-app": "^7.0.0",
     "jest": "^27.3.1",
     "nock": "^13.2.0",
     "supertest": "^6.1.6"
