add a container-build command
the gatsby-clean command from `build` will since it tries to remove folders on the host, which leads to permission errors. Since the container is always clean, we don't need it anyways

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "license": "Apache License 2.0",
   "scripts": {
     "build": "gatsby clean && gatsby build --prefix-paths",
+    "container-build": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
