--- a/package.json
+++ b/package.json
@@ -10,41 +10,39 @@
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.3",
     "flexsearch": "^0.6.32",
-    "fs-extra": "^10.0.0",
-    "gatsby-plugin-manifest": "^5.2.0",
+    "fs-extra": "^11.0.0",
     "graceful-fs": "^4.2.8",
     "jsonld": "^5.2.0",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
-    "koa-router": "^10.1.1",
+    "koa-router": "^12.0.0",
     "lodash.escaperegexp": "^4.1.2",
     "markdown-to-jsx": "^7.1.8",
     "mjn": "^0.2.6",
     "n3": "^1.16.3",
-    "node-fetch": "^2.6.6",
     "omit-empty": "^1.0.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "stream-browserify": "^3.0.0",
-    "url-template": "^2.0.8",
-    "uuid": "^8.3.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@gatsbyjs/reach-router": "^1.3.6",
+    "@gatsbyjs/reach-router": "^2.0.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
-    "babel-jest": "^27.3.1",
+    "babel-jest": "^29.0.0",
     "enzyme": "^3.11.0",
     "eslint": "^8.29.0",
     "eslint-config-react-app": "^7.0.0",
-    "gatsby": "^4.25.0",
-    "gatsby-plugin-emotion": "^7.25.0",
-    "gatsby-plugin-image": "^2.25.0",
-    "gatsby-plugin-sharp": "^4.25.0",
-    "gatsby-source-filesystem": "^4.25.0",
-    "gatsby-transformer-sharp": "^4.25.0",
-    "jest": "^27.3.1",
+    "gatsby": "^5.2.0",
+    "gatsby-plugin-emotion": "^8.0.0",
+    "gatsby-plugin-manifest": "^5.0.0",
+    "gatsby-plugin-image": "^3.0.0",
+    "gatsby-plugin-sharp": "^5.0.0",
+    "gatsby-source-filesystem": "^5.0.0",
+    "gatsby-transformer-sharp": "^5.0.0",
+    "jest": "^29.0.0",
     "nock": "^13.2.0",
     "supertest": "^6.3.2"
   },
@@ -61,7 +59,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "lint:js": "eslint src --ext .jsx,.js --quiet",
-    "test": "npm run lint:js && jest --verbose --detectOpenHandles --forceExit",
+    "test": "npm run lint:js && jest --verbose --forceExit",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand --verbose",
     "test:watch": "jest --watchAll --verbose",
     "test:coverage": "jest --verbose --coverage",
