migrate concept test to test-library

--- a/package.json
+++ b/package.json
@@ -30,19 +30,21 @@
   },
   "devDependencies": {
     "@gatsbyjs/reach-router": "^2.0.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "babel-jest": "^29.0.0",
     "enzyme": "^3.11.0",
     "eslint": "^8.29.0",
     "eslint-config-react-app": "^7.0.0",
     "gatsby": "^5.2.0",
     "gatsby-plugin-emotion": "^8.0.0",
-    "gatsby-plugin-manifest": "^5.0.0",
     "gatsby-plugin-image": "^3.0.0",
+    "gatsby-plugin-manifest": "^5.0.0",
     "gatsby-plugin-sharp": "^5.0.0",
     "gatsby-source-filesystem": "^5.0.0",
     "gatsby-transformer-sharp": "^5.0.0",
     "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.3.1",
     "nock": "^13.2.0",
     "supertest": "^6.3.2"
   },
