--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "build": "gatsby clean && gatsby build --prefix-paths",
     "container-build": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
-    "format": "prettier --write src/**/*.{js,jsx}",
+    "format": "prettier --write *.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "lint:js": "eslint src --ext .jsx,.js",
