--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "dotenv": "^16.0.3",
     "flexsearch": "^0.6.32",
     "fs-extra": "^11.0.0",
-    "graceful-fs": "^4.2.8",
     "gatsby": "^5.0.0",
     "gatsby-plugin-emotion": "^8.0.0",
     "gatsby-plugin-image": "^3.0.0",
@@ -20,6 +19,7 @@
     "gatsby-plugin-sharp": "^5.0.0",
     "gatsby-source-filesystem": "^5.0.0",
     "gatsby-transformer-sharp": "^5.0.0",
+    "graceful-fs": "^4.2.8",
     "jsonld": "^5.2.0",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
@@ -45,7 +45,8 @@
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.3.1",
     "nock": "^13.2.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "whatwg-fetch": "^3.6.2"
   },
   "keywords": [
     "SKOS",
