--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "lint-staged": "^13.1.0",
     "nock": "^13.2.0",
     "prettier": "^2.8.1",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "whatwg-fetch": "^3.6.2"
   },
   "keywords": [
     "SKOS",
