--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,24 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: skohub/skohub-vocabs-docker
+          tags: |
+            # set latest tag for default branch
+            type=raw,value=latest,enable={{is_default_branch}}
+            
+      - name: Build and export to Docker
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          load: true
+          tags: ${{ env.TEST_TAG }}
+
+      - name: Test docker image
+        run: |
+          mkdir public
+          mkdir data
+          cp .env.example .env
+          cp test/data/systematik.ttl data/
+          docker run --rm -v $(pwd)/public:/app/public -v $(pwd)/data:/app/data -v $(pwd)/.env:/app/.env ${{ env.TEST_TAG }}
 
       - name: Build and push
         uses: docker/build-push-action@v3
