--- a/package.json
+++ b/package.json
@@ -37,18 +37,22 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "babel-jest": "^29.0.0",
+    "cypress": "^12.3.0",
     "eslint": "^8.29.0",
     "eslint-config-react-app": "^7.0.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "husky": "^8.0.2",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.1.0",
     "nock": "^13.2.0",
     "prettier": "^2.8.1",
+    "start-server-and-test": "^1.15.2",
     "supertest": "^6.3.3",
     "whatwg-fetch": "^3.6.2"
   },
@@ -70,7 +74,11 @@
     "test:watch": "jest --watchAll --verbose",
     "test:coverage": "jest --verbose --coverage",
     "listen": "node src/webHookServer.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "test:e2e": "start-server-and-test develop http://localhost:8000/index.de.html cy:open",
+    "test:e2e:ci": "start-server-and-test develop http://localhost:8000/index.de.html cy:run"
   },
   "repository": {
     "type": "git",
