--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,11 +45,7 @@ jobs:
 
     - run: npm install
     - run: npm run build --if-present
-    - run: npm run test:coverage
-    - name: Generating coverage badges
-      uses: jpb06/jest-badges-action@latest
-      with:
-        branches: master,dev,233-tests
+    - run: npm run test
 
   docker:
     needs: [build]
