specify development port
strangley `act` set up development port 3000, whereas npm run develop and github action use port 8000.
I'm now overriding this and making sure its always 8000

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,4 +1,4 @@
-name: Cypress Tests
+name: E2E Tests
 
 on: [push]
 
@@ -22,6 +22,6 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5.0.5 # use the explicit version number
         with:
-          start: npm run develop
-          wait-on: http://localhost:3000/index.de.html
-          config: baseUrl=http://localhost:3000
+          start: npm run develop -- -p 8000
+          wait-on: http://localhost:8000/index.de.html
+          config: baseUrl=http://localhost:8000
