--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,3 +45,72 @@ jobs:
 
     - run: npm install
     - run: npm run build --if-present
+    - run: npm run test
+
+  e2e:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x]
+    container: cypress/base:18.12.0
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: echo Using node version $(node --version)
+      - run: echo Using npm version $(npm --version)
+      - run: cypress/prepare-cypress-test.sh
+      - name: Cypress run
+        uses: cypress-io/github-action@v5.0.5
+        with:
+          start: npm run develop -- -p 8000
+          wait-on: http://localhost:8000/index.de.html
+          config: baseUrl=http://localhost:8000
+
+  docker:
+    needs: [build, e2e]
+    if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: skohub/skohub-vocabs-docker
+          tags: |
+            # set latest tag for default branch
+            type=raw,value=latest,enable={{is_default_branch}}
+            
+      - name: Build and export to Docker
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          load: true
+          tags: ${{ env.TEST_TAG }}
+
+      - name: Test docker image
+        run: |
+          mkdir public
+          mkdir data
+          cp .env.example .env
+          cp test/data/interactivityType.ttl data/
+          docker run --rm -v $(pwd)/public:/app/public -v $(pwd)/data:/app/data -v $(pwd)/.env:/app/.env ${{ env.TEST_TAG }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
