add `-p` flag to mkdir to escape errors when dir already exists

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,8 +105,8 @@ jobs:
 
       - name: Test docker image
         run: |
-          mkdir public
-          mkdir data
+          mkdir -p public
+          mkdir -p data
           cp .env.example .env
           cp test/data/interactivityType.ttl data/
           docker run --rm -v $(pwd)/public:/app/public -v $(pwd)/data:/app/data -v $(pwd)/.env:/app/.env ${{ env.TEST_TAG }}
