update Dockerfile to run with user node
this way files created like the `public` folder are also accessible by the node user

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,17 @@
-__mocks__
-.cache
-.git
-.github
-data
-logs
-node_modules
-scripts
-test
+__mocks__/
+.git/
+.github/
+.husky/
+cypress/
+data/
+logs/
+node_modules/
+public/
+scripts/
+static/
+test/
 .vscode
+eslint*
+.prettier*
+cypress.config.js
+jest*
