--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "scripts": {
     "build": "gatsby clean && gatsby build --prefix-paths",
     "container-build": "gatsby build --prefix-paths",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -H 0.0.0.0",
     "format": "prettier --write **/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
