--- a/config.default.yaml
+++ b/config.default.yaml
@@ -2,20 +2,20 @@
 # see https://github.com/nextapps-de/flexsearch/tree/0.6.32#tokenizer for options
 tokenizer: "full" # strict, forward, reverse, full
 ui:
+  title: "SkoHub Vocabs" # Title is mandatory
+  logo: "skohub-signet-color.svg" # Path
   colors:
     skoHubWhite: "rgb(255, 255, 255)"
-    skoHubDarkGreen: "rgb(15, 85, 75)"
-    skoHubMiddleGreen: "rgb(20, 150, 140)"
-    skoHubLightGreen: "rgb(40, 200, 175)"
-    skoHubThinGreen: "rgb(55, 250, 210)"
-    skoHubBlackGreen: "rgb(5, 30, 30)"
+    skoHubDarkColor: "rgb(15, 85, 75)"
+    skoHubMiddleColor: "rgb(20, 150, 140)"
+    skoHubLightColor: "rgb(40, 200, 175)"
+    skoHubThinColor: "rgb(55, 250, 210)"
+    skoHubBlackColor: "rgb(5, 30, 30)"
     skoHubAction: "rgb(230, 0, 125)"
     skoHubNotice: "rgb(250, 180, 50)"
     skoHubDarkGrey: "rgb(155, 155, 155)"
     skoHubMiddleGrey: "rgb(200, 200, 200)"
     skoHubLightGrey: "rgb(235, 235, 235)"
-  logo: "skohub-signet-color.svg" # Path
-  title: "SkoHub Vocabs"
   fonts:
     regular:
       font_family: "Ubuntu"
