--- a/test/data/config/config.default.yaml
+++ b/test/data/config/config.default.yaml
@@ -2,13 +2,11 @@
 # see https://github.com/nextapps-de/flexsearch/tree/0.6.32#tokenizer for options
 tokenizer: "full" # strict, forward, reverse, full
 ui:
-  title: "Hello World"
-  # logo: "my-logo.png" # Path
   colors:
-    skoHubWhite: "rgb(255, 170, 170)"
-    skoHubDarkColor: "rgb(85, 0, 0)"
-    skoHubMiddleColor: "rgb(128, 21, 21)"
-    skoHubLightColor: "rgb(212, 106, 106)"
+    skoHubWhite: "rgb(255, 255, 255)"
+    skoHubDarkColor: "rgb(15, 85, 75)"
+    skoHubMiddleColor: "rgb(20, 150, 140)"
+    skoHubLightColor: "rgb(40, 200, 175)"
     skoHubThinColor: "rgb(55, 250, 210)"
     skoHubBlackColor: "rgb(5, 30, 30)"
     skoHubAction: "rgb(230, 0, 125)"
@@ -16,14 +14,16 @@ ui:
     skoHubDarkGrey: "rgb(155, 155, 155)"
     skoHubMiddleGrey: "rgb(200, 200, 200)"
     skoHubLightGrey: "rgb(235, 235, 235)"
+  logo: "skohub-signet-color.svg" # Path
+  title: "SkoHub Vocabs"
   fonts:
     regular:
-      font_family: "Aladin"
+      font_family: "Ubuntu"
       font_style: "normal"
       font_weight: 400
-      name: "aladin-v18-latin-regular"
+      name: "ubuntu-v20-latin-regular"
     bold:
-      font_family: "Alegreya Sans"
+      font_family: "Ubuntu"
       font_style: "normal"
       font_weight: 700
-      name: "alegreya-sans-v24-latin-700"
+      name: "ubuntu-v20-latin-700"
