--- a/package.json
+++ b/package.json
@@ -43,11 +43,14 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "babel-jest": "^29.0.0",
+    "babel-preset-gatsby": "^3.7.0",
     "cypress": "^12.3.0",
     "eslint": "^8.29.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-testing-library": "^5.10.2",
     "husky": "^8.0.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.1.0",
