🔎update flexsearch (finally)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@gatsbyjs/reach-router": "^2.0.0",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.3",
-    "flexsearch": "^0.6.32",
+    "flexsearch": "^0.7.31",
     "fs-extra": "^11.0.0",
     "gatsby": "^5.0.0",
     "gatsby-plugin-emotion": "^8.0.0",
@@ -61,7 +61,7 @@
     "build": "gatsby clean && gatsby build --prefix-paths",
     "container-build": "gatsby build --prefix-paths",
     "develop": "gatsby develop -H 0.0.0.0",
-    "format": "prettier --write **/*.{js,jsx}",
+    "format": "prettier --write '**/*.{js,jsx}'",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "lint:js": "eslint src --ext .jsx,.js --quiet",
