--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^9.0.0",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "babel-jest": "^29.0.0",
-    "babel-preset-gatsby": "^3.7.0",
+    "@vitejs/plugin-react": "^4.0.4",
+    "@vitest/coverage-v8": "^0.34.2",
     "cypress": "^12.3.0",
     "eslint": "^8.29.0",
     "eslint-config-react-app": "^7.0.0",
@@ -45,12 +45,11 @@
     "eslint-plugin-testing-library": "^5.10.2",
     "husky": "^8.0.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^28.0.0",
-    "jest-environment-jsdom": "^28.0.0",
+    "jsdom": "^22.1.0",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "start-server-and-test": "^1.15.2",
-    "whatwg-fetch": "^3.6.2"
+    "vitest": "^0.34.1"
   },
   "keywords": [
     "SKOS",
@@ -65,10 +64,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "lint:js": "eslint src --ext .jsx,.js --quiet",
-    "test": "jest --verbose --forceExit",
-    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand --verbose",
-    "test:watch": "jest --watchAll --verbose",
-    "test:coverage": "jest --verbose --coverage",
+    "test": "vitest",
+    "test:coverage": "vitest --coverage",
     "prepare": "husky install",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
