--- a/config.default.yaml
+++ b/config.default.yaml
@@ -1,6 +1,8 @@
 ---
 # see https://github.com/nextapps-de/flexsearch/tree/0.6.32#tokenizer for options
 tokenizer: "full" # strict, forward, reverse, full
+searchableAttributes:
+  - "prefLabel"
 ui:
   title: "SkoHub Vocabs" # Title is mandatory
   logo: "skohub-signet-color.svg" # Path
