--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x]
-    container: cypress/base:18.12.0
+    container: cypress/browsers:node18.12.0-chrome106-ff106
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -66,7 +66,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
-          browser: firefox
+          browser: chrome
           start: npm run develop -- -p 8000
           wait-on: http://localhost:8000/index.de.html
           config: baseUrl=http://localhost:8000
