--- a/config.default.yaml
+++ b/config.default.yaml
@@ -1,6 +1,7 @@
 ---
-# see https://github.com/nextapps-de/flexsearch/tree/0.6.32#tokenizer for options
+# see https://github.com/nextapps-de/flexsearch#tokenizer-prefix-search for options
 tokenizer: "full" # strict, forward, reverse, full
+custom_domain: ""
 searchableAttributes:
   - "prefLabel" # you should not delete this one
   - "notation"
