--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@gatsbyjs/reach-router": "^2.0.0",
+    "@rdfjs/parser-n3": "^2.0.1",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.3",
     "flexsearch": "^0.7.31",
@@ -26,6 +27,8 @@
     "n3": "^1.16.3",
     "omit-empty": "^1.0.0",
     "prop-types": "^15.7.2",
+    "rdf-ext": "^2.3.0",
+    "rdf-validate-shacl": "^0.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
