--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/cypress": "^9.0.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
