Adjust config test

--- a/test/data/config/config.default.yaml
+++ b/test/data/config/config.default.yaml
@@ -3,6 +3,7 @@
 tokenizer: "full" # strict, forward, reverse, full
 searchableAttributes:
   - "prefLabel"
+fail_on_validation: true
 ui:
   colors:
     skoHubWhite: "rgb(255, 255, 255)"
