Add e2e as dependency to docker build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
           config: baseUrl=http://localhost:8000
 
   docker:
-    needs: [build]
+    needs: [build, e2e]
     if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' }}
     runs-on: ubuntu-latest
     steps:
