--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@gatsbyjs/reach-router": "^2.0.0",
+    "@rdfjs/dataset": "^2.0.1",
     "@rdfjs/parser-n3": "^2.0.1",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.3",
@@ -21,7 +22,7 @@
     "gatsby-transformer-sharp": "^5.0.0",
     "graceful-fs": "^4.2.8",
     "js-yaml": "^4.1.0",
-    "jsonld": "^8.2.0",
+    "jsonld": "^8.3.2",
     "lodash.escaperegexp": "^4.1.2",
     "markdown-to-jsx": "^7.1.8",
     "n3": "^1.16.3",
