Add footer to config test

--- a/test/data/config/config.default.yaml
+++ b/test/data/config/config.default.yaml
@@ -30,3 +30,17 @@ ui:
       font_style: "normal"
       font_weight: 700
       name: "ubuntu-v20-latin-700"
+  footer:
+    links:
+      - title: "Impressum"
+        url: "https://www.hbz-nrw.de/impressum"
+        target: "_blank"
+        rel: "noopener noreferrer"
+      - title: "Datenschutz"
+        url: "https://www.hbz-nrw.de/datenschutz"
+        target: "_blank"
+        rel: "noopener noreferrer"
+      - title: "SkoHub"
+        url: "https://skohub.io"
+        target: "_blank"
+        rel: "noopener noreferrer"
