--- a/config.default.yaml
+++ b/config.default.yaml
@@ -47,7 +47,7 @@ ui:
         url: "https://www.hbz-nrw.de/datenschutz"
         target: "_blank"
         rel: "noopener noreferrer"
-      - title: "SkoHub"
+      - title: "© SkoHub"
         url: "https://skohub.io"
         target: "_blank"
         rel: "noopener noreferrer"
